package v1.TestingFiles;

// Animal interface
public interface Animal {
    void makeSound();
    void eat();
    void eating(String e);
}

