package v1.TestingFiles;

public interface Animal2 {
    void makeSound();
    void eat();
    void eating(String e);
}
