' Generated by UML Generator
' Encoded: hLHDJy904BttLqpqKgmbQkAb4GBn8o4nNl2WtfRjG3UqMxExLG7njplJIcq1FN5fkk-zl9bvi-t0Ec5SaQMUdIlzAep8GAR2sg5pHaqAXoEPwx5Q8fnvYOeHf38oHSzJsg6P2eamr2eJAQmyWAzCp76S5phsEn6yvIfc48NREYezyp62CTNGimsrtZMzE8XhEH1S2rUwXLfajOhF8Jq2OlqcqM5mNzsWNJVugovHLXhXPEBlj7AJp_vfXTY3jpB5lOqyedLtenIhc9SHq0BAC9jDVPGmzE2IgHNT6AVa6fej4daqF69w4K6S5nEoxC4vLwxrjYcsB3vs2HsRfQp8MYgHiIv8CA5Izygwguhi4wln7OR6Y4M9ztsEAPJ2HRnfVezpygOmsK4NsGGtumL6w3ZVoNqJXjzEVeRkXI5owjGE1DvodBK58q_-hw0Uc_07Icf7_Cn85TMsVjmMMqRgz4uXrzKaZMtotUvsF_i_dut75wnvhlTy4ePbF2s0CngWZkaty0q
' URL: http://www.plantuml.com/plantuml/uml/hLHDJy904BttLqpqKgmbQkAb4GBn8o4nNl2WtfRjG3UqMxExLG7njplJIcq1FN5fkk-zl9bvi-t0Ec5SaQMUdIlzAep8GAR2sg5pHaqAXoEPwx5Q8fnvYOeHf38oHSzJsg6P2eamr2eJAQmyWAzCp76S5phsEn6yvIfc48NREYezyp62CTNGimsrtZMzE8XhEH1S2rUwXLfajOhF8Jq2OlqcqM5mNzsWNJVugovHLXhXPEBlj7AJp_vfXTY3jpB5lOqyedLtenIhc9SHq0BAC9jDVPGmzE2IgHNT6AVa6fej4daqF69w4K6S5nEoxC4vLwxrjYcsB3vs2HsRfQp8MYgHiIv8CA5Izygwguhi4wln7OR6Y4M9ztsEAPJ2HRnfVezpygOmsK4NsGGtumL6w3ZVoNqJXjzEVeRkXI5owjGE1DvodBK58q_-hw0Uc_07Icf7_Cn85TMsVjmMMqRgz4uXrzKaZMtotUvsF_i_dut75wnvhlTy4ePbF2s0CngWZkaty0q
' Generated on: 2025-08-09T03:03:21.577966700

@startuml
skinparam classAttributeIconSize 0
hide circle

interface Animal {
  ~makeSound(): void
  ~eat(): void
  ~eating(e: String): void
}

interface Animal2 {
  ~makeSound(): void
  ~eat(): void
  ~eating(e: String): void
}

class Cat {
  -name: String
  --
  +Cat(name: String)
  +makeSound(): void
  +eat(): void
  +eating(e: String): void
  +scratch(): void
}

class Dog {
  -name: String
  --
  +Dog(name: String)
  +makeSound(): void
  +eat(): void
  +eating(e: String): void
  +fetch(): void
}

class TestFIle {
  ~z: int
  ~e: String
  -x: int = 5
  ~{static} name: String = "A"
  ~y: double = 1
  +{static} s: String = "s"
  #thing: String
  -sam: String = "sam"
  +hehe: List<String> = new ArrayList<>()
  -cat: Cat
  -dog: Dog
  +numbe: int
  +rando: String
  --
  +TestFIle(e: String)
  +getZ(e: Dog): int
  +getE(): String
  +getX(): int
  +{static} getName(): String
  +getY(): double
  +{static} getS(): String
  +setS(s: String, one: int): void
}

Cat ..|> Animal
Dog ..|> Animal
TestFIle *-- Cat
TestFIle *-- Dog
@enduml